syntax="proto2";

package pgLogin;

import "vendor/github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.gostring_all) = true;
option (gogoproto.equal_all) = true;
option (gogoproto.verbose_equal_all) = true;
option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.stringer_all) =  true;
option (gogoproto.populate_all) = true;
option (gogoproto.testgen_all) = true;
option (gogoproto.benchgen_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;

//游客绑定微信
message GuestBindWechatRequest
{
    optional int64 mid = 1[(gogoproto.nullable) = false]; //用户mid
    optional string open_id = 2[(gogoproto.nullable) = false]; //微信用户的标识
    optional string union_id = 3[(gogoproto.nullable) = false]; //微信用户统一标识
    optional string access_token = 4[(gogoproto.nullable) = false];//范围令牌
}

message GuestBindWechatRespData
{
    optional int32 login_type = 1[(gogoproto.nullable) = false]; //登录类型
}

message GuestBindWechatResponse
{
    optional int32 status = 1[(gogoproto.nullable) = false]; //状态 0 成功 >=1失败
    optional string msg = 2[(gogoproto.nullable) = false]; //错误信息
    optional GuestBindWechatRespData data = 3[(gogoproto.nullable) = false];
}


//游客绑定手机
message GuestBindPhoneRequest
{
    optional int64 mid = 1[(gogoproto.nullable) = false]; //用户mid
    optional string phone = 2[(gogoproto.nullable) = false]; //手机号
    optional string captcha = 3[(gogoproto.nullable) = false]; //验证码
}

message GuestBindPhoneRespData
{
    optional int32 login_type = 1[(gogoproto.nullable) = false];
    optional string pwd = 2[(gogoproto.nullable) = false];
    optional string bid = 3[(gogoproto.nullable) = false];
    optional string access_token = 4[(gogoproto.nullable) = false];
}

message GuestBindPhoneResponse
{
    optional int32 status = 1[(gogoproto.nullable) = false];  //状态 0 成功 >=1失败
    optional string msg = 2[(gogoproto.nullable) = false]; //错误信息
    optional GuestBindPhoneRespData data = 3[(gogoproto.nullable) = false];
}

//微信绑定手机
message WechatBindPhoneRequest
{
    optional int64 mid = 1[(gogoproto.nullable) = false]; //用户mid
    optional string phone = 2[(gogoproto.nullable) = false]; //手机号
    optional string captcha = 3[(gogoproto.nullable) = false]; //验证码
    optional string pwd  = 4[(gogoproto.nullable) = false]; //密码
}

message WechatBindPhoneRespData
{
    optional string pwd = 1[(gogoproto.nullable) = false]; //游客升级为手机需要改
}

message WechatBindPhoneResponse
{
    optional int32 status = 1[(gogoproto.nullable) = false];  //状态 0 成功 >=1失败
    optional string msg = 2[(gogoproto.nullable) = false]; //错误信息
    optional WechatBindPhoneRespData data = 3[(gogoproto.nullable) = false];
}

